--- a/encrypt/index.html
+++ b/encrypt/index.html
@@ -116,16 +116,16 @@
       <h1>pgp --encrypt</h1>
     </div>
     <div class="input-wrapper">
-      <textarea id="input-pubkey" rows="5" placeholder="pubkey"></textarea>
+      <textarea id="input-pubkey" spellcheck="false" autocomplete="off" rows="5" placeholder="pubkey"></textarea>
     </div>
     <div class="input-wrapper">
-      <textarea id="input-pubkey-info" disabled="disabled" rows="1" placeholder="pubkey info"></textarea>
+      <textarea id="input-pubkey-info" spellcheck="false" autocomplete="off" disabled="disabled" rows="1" placeholder="pubkey info"></textarea>
     </div>
     <div class="input-wrapper">
-      <textarea id="input-message" rows="5" placeholder="message"></textarea>
+      <textarea id="input-message" spellcheck="false" autocomplete="off" rows="5" placeholder="message"></textarea>
     </div>
     <div class="input-wrapper">
-      <textarea readonly="readonly" id="output-cipher" rows="5" placeholder="cipher"></textarea>
+      <textarea readonly="readonly" spellcheck="false" autocomplete="off" id="output-cipher" rows="5" placeholder="cipher"></textarea>
     </div>
   </main>
 </body>
