disable autocaps for message textarea

--- a/encrypt/index.html
+++ b/encrypt/index.html
@@ -122,7 +122,7 @@
       <textarea id="input-pubkey-info" spellcheck="false" autocomplete="off" disabled="disabled" rows="1" placeholder="pubkey info"></textarea>
     </div>
     <div class="input-wrapper">
-      <textarea id="input-message" spellcheck="false" autocomplete="off" rows="5" placeholder="message"></textarea>
+      <textarea id="input-message" autocapitalize="off" spellcheck="false" autocomplete="off" rows="5" placeholder="message"></textarea>
     </div>
     <div class="input-wrapper">
       <textarea readonly="readonly" spellcheck="false" autocomplete="off" id="output-cipher" rows="5" placeholder="cipher"></textarea>
