--- a/encrypt/index.html
+++ b/encrypt/index.html
@@ -32,11 +32,12 @@
 
     .info  {
       font-family: monospace;
-      margin: 20px 10px;
+      margin: 10px 10px;
     }
 
     .info h1 {
       color: wheat;
+      margin: 0;
       letter-spacing: 3px;
     }
 
