--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
       <p>
         <a href="encrypt">--encrypt</a>
       </p>
+      <p>
+        <a href="generatekeys">--generateKeys</a>
+      </p>
     </div>
   </main>
 </body>
