disable autocomplete on decrypt

--- a/decrypt/index.html
+++ b/decrypt/index.html
@@ -67,16 +67,16 @@
       <h1>pgp --decrypt</h1>
     </div>
     <div class="input-wrapper">
-      <textarea id="input-privkey" autocapitalize="off" spellcheck="false" autocomplete="on" rows="3" placeholder="privkey"></textarea>
+      <textarea id="input-privkey" autocapitalize="off" spellcheck="false" autocomplete="off" rows="3" placeholder="privkey"></textarea>
     </div>
     <div class="input-wrapper">
-      <input id="input-password" type="password" spellcheck="false" autocomplete="on" rows="1" placeholder="password" />
+      <input id="input-password" type="password" spellcheck="false" autocomplete="off" rows="1" placeholder="password" />
     </div>
     <div class="input-wrapper">
-      <textarea id="input-cipher" autocapitalize="off" spellcheck="false" autocomplete="on" rows="5" placeholder="cipher"></textarea>
+      <textarea id="input-cipher" autocapitalize="off" spellcheck="false" autocomplete="off" rows="5" placeholder="cipher"></textarea>
     </div>
     <div class="input-wrapper">
-      <textarea id="output-cleartext" readonly="readonly" autocapitalize="off" spellcheck="false" autocomplete="on" rows="5" placeholder="cleartext"></textarea>
+      <textarea id="output-cleartext" readonly="readonly" autocapitalize="off" spellcheck="false" autocomplete="off" rows="5" placeholder="cleartext"></textarea>
     </div>
   </main>
 </body>
