add decrypt to navigation

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <a href="encrypt">--encrypt</a>
       </p>
       <p>
+        <a href="decrypt">--decrypt</a>
+      </p>
+      <p>
         <a href="generatekeys">--generateKeys</a>
       </p>
     </div>
